# ton_core

./: README.md  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
ios/: ton_core.podspec
ios/Classes/: SwiftTonCorePlugin.swift  TonCorePlugin.h  TonCorePlugin.m
lib/: ton_core.dart
lib/src/: ton_core.dart
lib/src/bindings/: bindings.dart  dylib.dart  signatures.dart
lib/src/entrypoints/: estimate_fees_entrypoint.dart  generate_address_entrypoint.dart  generate_deploy_message_entrypoint.dart  generate_keypair_from_mnemonic_entrypoint.dart  generate_message_entrypoint.dart  generate_mnemonic_entrypoint.dart  get_account_entrypoint.dart  get_transactions_entrypoint.dart  send_message_entrypoint.dart
lib/src/models/: account.dart  account.freezed.dart  account.g.dart  contract_type.dart  isolate_message.dart  keypair.dart  keypair.freezed.dart  keypair.g.dart  message.dart  message.freezed.dart  message.g.dart  native_exception.dart  native_response.dart  (+14 more)
rust/: Cargo.toml  cbindgen.toml  makefile
rust/src/: lib.rs
rust/src/account/: mod.rs
rust/src/call/: mod.rs  models.rs
rust/src/contracts/: mod.rs
rust/src/contracts/abi/: mod.rs
rust/src/contracts/code/: mod.rs
rust/src/crypto/: mod.rs
rust/src/deploy/: mod.rs
rust/src/ffi/: mod.rs  models.rs
rust/src/helpers/: address.rs  mod.rs
test/: raw_data_test.dart
(+5 files in other folders)
